[project]
name = "openonce"
version = "0.1.0"
description = "Durable side effects for AI agent tool calls: at-least-once execution + idempotency + reconciliation. Not a workflow engine."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Eric", email = "eric@memov.ai" }]
keywords = ["ai-agents", "idempotency", "side-effects", "durable-execution", "tool-calls", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
# Core is stdlib-only: sqlite3, hashlib, json, threading. Zero infra to try it.
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
stripe = ["stripe>=11"]

[project.scripts]
openonce = "openonce.cli:main"

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.8", "mypy>=1.13"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openonce"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# These exceptions are control-flow signals (ApprovalPending, EffectUnknown...),
# not error conditions; an "Error" suffix would misstate their semantics.
"src/openonce/errors.py" = ["N818"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
strict = true
